# ml-demo

./: .gitignore  course_NLP12_Transfer_Learning_for_Text_Classification_Using_Hugging_Face_Transformers_Trainer.ipynb  main.py  pyproject.toml  v0.0.0_NLP12_Transfer_Learning_for_Text_Classification_Using_Hugging_Face_Transformers_Trainer.ipynb  v0.0.1_huggingface_demo.ipynb  v0.0.2_pipeline.ipynb  v0.1.0_pytorch_init.ipynb  v0.1.0_pytorch_tensors.ipynb  v0.1.1_pytorch_autograd.ipynb  v0.1.2_neural_networks.ipynb
figures/: bert_graph
models/: label_encoder.pkl
output/sentiment_transfer_learning_transformer/checkpoint-200/: config.json  rng_state.pth  trainer_state.json
output/sentiment_transfer_learning_transformer/checkpoint-400/: rng_state.pth  trainer_state.json
output/sentiment_transfer_learning_transformer/logs/: events.out.tfevents.1757946878.workstation.300894.0  events.out.tfevents.1757946969.workstation.301336.0  events.out.tfevents.1757946986.workstation.301336.1  events.out.tfevents.1757949464.workstation.307342.0  events.out.tfevents.1757949483.workstation.307342.1
train/demo/: README.md  config.json
train/demo/checkpoint-1000/: rng_state.pth  trainer_state.json
train/demo/checkpoint-1230/: config.json  rng_state.pth  trainer_state.json
train/demo/checkpoint-500/: rng_state.pth  trainer_state.json
train/demo/checkpoint-66/: rng_state.pth  trainer_state.json
train/demo/runs/Sep29_16-43-27_workstation/: events.out.tfevents.1759178625.workstation.191437.0  events.out.tfevents.1759178796.workstation.191437.1
(+13 files in other folders)
