[project]
name = "ml-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda12]>=0.7.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
