[project]
name = "ml-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "jax[cuda12]>=0.7.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchviz>=0.0.3",
    "transformers>=4.56.1",
]
